syntax = "proto3";

package block;

option go_package = "github.com/harrybrwn/go-ledger/block;block";

message Block {
    bytes Data  = 1;
    repeated Transaction Transactions = 2;
    int64 Nonce    = 3;
    bytes Hash     = 4;
    bytes PrevHash = 5;
}

message Transaction {
    bytes ID = 1;
    // list of transaction inputs
    repeated TxInput Inputs = 2;
    // list of transaction outputs
    repeated TxOutput Outputs = 3;
}

message TxInput {
    // TxID is the transaction id
    bytes TxID = 1;
    // OutIndex gives the index of the output refrenced
    // with respect to the transaction's list of
    // outputs (0 being the transaction's first output and so on...)
    int32 outIndex = 2;
    // Signature is the digital signature of
    // the sender
    bytes signature = 3;
    // Public key of the sender
    bytes pubKey = 4;
}

message TxOutput {
    // Amount holds the amount
    // of coins in the output
    uint64 amount = 1;
    // Hash of the recipient's public
    // key (see wallet package)
    bytes pubKeyHash = 2;

    oneof payload {
        // Token amount
        uint64 token = 3;
        // A document
        string document = 4;
        // Raw data
        bytes data = 5;
    }
}
